[xiaolumm]fix clickprice and alert message

--- a/shopmanager/flashsale/xiaolumm/templates/mama_income.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_income.html
@@ -40,6 +40,9 @@
 <ul class="list-group">
 <li class="list-group-item"><lable>妈妈编号：</label> <b>{{ pk }}</b></li>
 <li class="list-group-item"><span style="color:orange">点击人数： {{ click_num }}</span></li>
+{% if futrue_click_price > 0 and futrue_click_price < 0.2 %}
+<li class="list-group-item"><span style="color:#A30000;">由于您多日没有订单，明日点击价格将下调为{{ futrue_click_price }}元（成交2日后价格恢复正常）。</span></li>
+{% endif %}
 <li class="list-group-item"><span style="color:orange">点击补贴： {{ click_num }} * {{ click_price }} = ￥{{ click_pay }}</span>
 {% if not exam_pass %}（<a href="/sale/exam/">考试通过后生效</a>）{% endif %}</li>
 {% if active_start %}
