--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
@@ -97,6 +97,22 @@
             color: #74b936;
             text-decoration: none
         }
+
+        .portfolio-box img {
+            box-shadow: 2px 2px 5px rgba(187, 187, 187, 0.5);
+            -webkit-transition: -webkit-transform 0.2s ease-out;
+            -moz-transition: -moz-transform 0.2s ease-out;
+            -o-transition: -o-transform 0.2s ease-out;
+            transition: transform 0.2s ease-out;
+        }
+
+        .portfolio-box img:hover {
+            -webkit-transform: scale(1.3) rotate(20deg);
+            -moz-transform: scale(1.3) rotate(20deg);
+            -o-transform: scale(1.3) rotate(20deg);
+            -ms-transform: scale(1.3) rotate(20deg);
+            transform: scale(1.3) rotate(20deg);
+        }
     </style>
     <script>
 
@@ -193,8 +209,9 @@
                                         <a href="/sale/dinghuo/adddetail/{{ product.0 }}"
                                            target="_blank">编码:{{ product.0 }}</a>
                                     </td>
-                                    <td rowspan="{{ sku_len }}"><img src="{{ sku.pic_path }}" width="100px"
-                                                                     class="img-circle">
+                                    <td rowspan="{{ sku_len }}">
+                                        <div class="portfolio-box"><img src="{{ sku.pic_path }}" width="100px"
+                                                                        class="img-circle"></div>
                                     </td>
                                 {% endif %}
                                 <td>{{ sku.sku_name }}</td>
