[restpro][pay]add salerefund buyer_id and restpro refunds adress viewset

--- a/shopmanager/flashsale/restpro/templates/rest_base.html
+++ b/shopmanager/flashsale/restpro/templates/rest_base.html
@@ -28,7 +28,7 @@
     	<div class="container">
 		  <h1>Hello, world!</h1>
 		  <p>小鹿特卖平台接口文档</p>
-		  <p><a class="btn btn-primary btn-lg" href="/rest/api/?format=api" role="button">查看文档</a></p>
+		  <p><a class="btn btn-primary btn-lg" href="/rest/v1/" role="button">查看文档[版本V1]</a></p>
 		</div>
 		</div>
     </div>
