[xlmm][flashsale][daystat] add mm stats

--- a/shopmanager/flashsale/daystats/templates/xiaolumm/data2salepeople.html
+++ b/shopmanager/flashsale/daystats/templates/xiaolumm/data2salepeople.html
@@ -9,6 +9,7 @@
             <thead>
             <th></th>
             <th>总购买人数</th>
+            <th>总购买mm</th>
             <th>重复购买</th>
             <th>重复购买的妈妈</th>
             </thead>
@@ -17,6 +18,7 @@
                 <tr>
                     <td>{{ data.month }}月份</td>
                     <td>{{ data.all_purchase_num }}</td>
+                    <td>{{ data.xlmm_num }}</td>
                     <td>{{ data.repeat_user_num }}</td>
                     <td>{{ data.repeat_xlmm_num }}</td>
                 </tr>
