[xlmm][flashsale][daystat] remove kuohao

--- a/shopmanager/flashsale/daystats/templates/xiaolumm/data2salepeople.html
+++ b/shopmanager/flashsale/daystats/templates/xiaolumm/data2salepeople.html
@@ -20,12 +20,12 @@
                         });
 
                     }else{
-                        setTimeout(get_data(), 4000);
+                        setTimeout(get_data, 4000);
                     }
                 }
             });
         }
-        setTimeout(get_data(), 4000);
+        setTimeout(get_data, 4000);
     </script>
 {% endblock %}
 {% block container %}
