--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
@@ -8,7 +8,7 @@
             type="text/javascript"></script>
     <script src="{{ STATIC_URL }}jquery-timepicker-addon/js/jquery-ui-timepicker-zh-CN.js"
             type="text/javascript"></script>
-    <script src="http://www.bootcss.com/p/grumblejs/js/jquery.grumble.min.js"></script>
+{#    <script src="http://www.bootcss.com/p/grumblejs/js/jquery.grumble.min.js"></script>#}
 
     <style type="text/css">
         .floatButton {
@@ -126,17 +126,17 @@
             var e = $("#loading");
             e.show()
         }
-        $(function () {
-            $('#test_gru').grumble(
-                    {
-                        text: '订货情况',
-                        angle: 165,
-                        distance: 60,
-                        type: 'alt-',
-                        hideAfter: 3000
-                    }
-            );
-        });
+{#        $(function () {#}
+{#            $('#test_gru').grumble(#}
+{#                    {#}
+{#                        text: '订货情况',#}
+{#                        angle: 165,#}
+{#                        distance: 60,#}
+{#                        type: 'alt-',#}
+{#                        hideAfter: 3000#}
+{#                    }#}
+{#            );#}
+{#        });#}
 
     </script>
 {% endblock %}
