--- a/shopmanager/flashsale/pay/templates/pay/maddresslist.html
+++ b/shopmanager/flashsale/pay/templates/pay/maddresslist.html
@@ -34,7 +34,7 @@
 
 
 {% block preload_script %}
-<script src="http://ajax.aspnetcdn.com/ajax/jquery.mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<script src="http://cdn.bootcss.com/jquery-mobile/1.4.5/jquery.mobile.min.js"></script>
 {% endblock %}
 
 
