--- a/shopmanager/flashsale/dinghuo/templates/admin/dinghuo/orderlist/change_list.html
+++ b/shopmanager/flashsale/dinghuo/templates/admin/dinghuo/orderlist/change_list.html
@@ -54,12 +54,15 @@
 
 {% block content %}
     <div id="content-main">
+        <div class="popup-gallery">
+
+        </div>
         {% block object-tools %}
             {% if has_add_permission %}
                 <ul class="object-tools">
                     {% block object-tools-items %}
                         <li>
-                            <a href="/sale/dinghuo/daily/"  target="_blank">
+                            <a href="/sale/dinghuo/daily/" target="_blank">
                                 小鹿美美每日大货统计
                             </a>
                         </li>
