--- a/shopmanager/flashsale/xiaolumm/static/css/mama_profile.css
+++ b/shopmanager/flashsale/xiaolumm/static/css/mama_profile.css
@@ -11,3 +11,15 @@
 tfoot input{
 	width:50%;
 }
+
+h1 {
+  display: block;
+  font-size: 1.35em;
+  -webkit-margin-before: 0.67em;
+  -webkit-margin-after: 0.67em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  font-weight: bold;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
