[xlmm][mama search ]  add function mama information search

--- a/shopmanager/flashsale/xiaolumm/templates/admin/xiaolumm/xiaolumama/change_list.html
+++ b/shopmanager/flashsale/xiaolumm/templates/admin/xiaolumm/xiaolumama/change_list.html
@@ -27,6 +27,11 @@
             TOP-50
           </a>
         </li>
+          <li>
+          <a href="/m/mama_show_all/" class="historylink" target="_blank">
+            代理查询
+          </a>
+        </li>
         <li>
           <a href="{% url cl.opts|admin_urlname:'add' %}{% if is_popup %}?_popup=1{% endif %}" class="addlink">
             {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
